Bug #15968 Partitions: crash when INSERT with f1 = -1 into PARTITION BY HASH(f1)
Submitted: 23 Dec 2005 18:43 Modified: 20 Jan 2006 11:55
Reporter: Matthias Leich
Status: Closed
Category:Server: Partition Severity:S1 (Critical)
Version:5.1 OS:
Assigned to: Reggie Burnett Target Version:

[23 Dec 2005 18:43] Matthias Leich
Description:
CREATE TABLE t1 ( f1 INTEGER, f2 char(20)) ENGINE = 'MYISAM'
PARTITION BY HASH(f1) PARTITIONS 2;

INSERT INTO t1 SET f1 = 0 , f2 = '#######';
--> harmless

INSERT INTO t1 SET f1 = 0 - 1   , f2 = '#######';
--> crash

A table with one partition
    CREATE TABLE t1 ( f1 INTEGER, f2 char(20)) ENGINE = 'MYISAM';
or
    INSERT INTO t1 SET f1 = 0 , f2 = '#######';
are harmless.

My environment:
   - Intel PC with Linux(SuSE 9.3)
   - MySQL compiled from source
         bk-internal.mysql.com:/home/bk/mysql-5.1-wl2604-new
              last ChangeSet@1.1981, 2005-12-15

How to repeat:
Please execute the statements above or the test ps_02myisam,
which is pushed into the tree 
bk-internal.mysql.com:/home/bk/mysql-5.1-wl2604-new
[7 Jan 2006 1:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/731
[20 Jan 2006 11:55] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 5.1.6 changelog. Closed.