Bug# 15968 - Partitions: crash when insert with f1 = -1 into partition by hash(f1) fixed